updates to openapi def
